# reze-rs

./: Cargo.toml  README.md
cli/: Cargo.toml  reze_cli_config.json
cli/json/: _bgp_debug.cli.json  _ipv6.cli.json  _ospf_opaque.cli.json  _plist.cli.json  _routemap.cli.json  bgp_debug.cli.json  bgp_filter.cli.json  bgp_nexthop.cli.json  bgp_route.cli.json  bgp_routemap.cli.json  bgp_vty.cli.json  builtins.cli.json  cli.schema.json  config.cli.json  config_if.cli.json  exec.cli.json  filter.cli.json  interface.cli.json  ospf.cli.json  ospf_dump.cli.json  ospf_opaque.cli.json  ospf_routemap.cli.json  ospf_show.cli.json  ospf_virtual_link.cli.json  ospf_vty.cli.json  plist.cli.json  reze.cli_mode.json  vty.cli.json  zebra.cli.json  zebra_routemap.cli.json  zebra_show.cli.json  zebra_vty.cli.json
cli/scripts/: cli_exec.rb  placeholder.erb  show_ip_route.erb
cli/src/: action.rs  builtins.rs  cli.rs  client.rs  collate.rs  config.rs  error.rs  lib.rs  main.rs  master.rs  node.rs  parser.rs  readline.rs  signal.rs  tree.rs  uds_client.rs  utils.rs  view.rs
common/: Cargo.toml
common/src/: access_list.rs  acl.rs  address_family.rs  channel.rs  consts.rs  epoll.rs  error.rs  event.rs  lib.rs  main.rs  method.rs  nexthop.rs  timer.rs  uds_client.rs  uds_server.rs
controller/: Cargo.toml
routerd/: Cargo.toml
routerd/src/: lib.rs  main.rs
routerd/src/bgp/: master.rs  mod.rs
routerd/src/core/: config.rs  config_global.rs  config_master.rs  error.rs  event.rs  master.rs  mds.rs  mds_master.rs  mod.rs  nexus.rs  protocols.rs  signal.rs  timer.rs  uds_server.rs  utils.rs
routerd/src/core/message/: mod.rs  nexus.rs  zebra.rs
routerd/src/ospf/: area.rs  consts.rs  interface.rs  ism.rs  lsa.rs  lsdb.rs  master.rs  mod.rs  neighbor.rs  network.rs  ospf.rs
routerd/src/zebra/: address.rs  config.rs  error.rs  kernel.rs  link.rs  master.rs  mod.rs  netlink.rs  nexthop.rs  rib.rs  route.rs  static_route.rs
routerd/src/zebra/linux/: encode.rs  mod.rs  netlink.rs  rt_netlink.rs  rtnetlink.rs
rzcli/: Cargo.toml
rzcli/json/: bgp_filter.cli.json  bgp_route.cli.json  bgp_routemap.cli.json  bgp_vty.cli.json  builtins.cli.json  command.cli.json  config.cli.json  exec.cli.json  filter.cli.json  if.cli.json  interface.cli.json  ospf_routemap.cli.json  ospf_vty.cli.json  reze.cli_mode.json  routemap.cli.json  vty.cli.json  zebra_routemap.cli.json  zebra_vty.cli.json
rzcli/src/: action.rs  builtins.rs  cli.rs  collate.rs  error.rs  lib.rs  main.rs  node.rs  parser.rs  readline.rs  signal.rs  tree.rs
rzctld/: Cargo.toml
rzrtd/: Cargo.toml
rzrtd/src/: lib.rs  main.rs
rzrtd/src/bgp/: master.rs  mod.rs
rzrtd/src/core/: bootstrap.rs  error.rs  event.rs  master.rs  master_message.rs  mod.rs  nexus.rs  protocols.rs  router_master.rs  timer.rs  uds_server.rs
rzrtd/src/core/message/: master.rs  mod.rs  nexus.rs  zebra.rs
rzrtd/src/ospf/: master.rs  mod.rs
rzrtd/src/zebra/: master.rs  mod.rs
