[package]
name = "cli"
version = "0.1.0"
authors = ["Toshiaki Takada <toshi@reze.rs>"]
edition = "2018"

[dependencies]
getopts = "0.2.18"
quick-error = "1.2.2"
#rustyline = "3.0.0"
#rustyline = { git = "https://github.com/sjtakada/rustyline", branch = "custom" }
rustyline = { path = "/home/toshiaki/git/rustyline" }
serde = "1.0.101"
serde_json = "1.0.41"
mio = "0.6.16"
mio-uds = "0.6.7"
nix = "0.13.0"

common = { path = "../common" }
