[package]
name = "common"
version = "0.1.0"
authors = ["Toshiaki Takada <toshiaki.takada@gmail.com>"]
edition = "2018"

[dependencies]
quick-error = "1.2.3"
log = "0.4.8"
simplelog = "0.7.4"
mio = "0.6.21"
mio-uds = "0.6.7"
serde = "1.0.104"
serde_json = "1.0.45"
libc = "0.2.60"

#rtable = "0.2.1"
rtable = { git = "https://github.com/sjtakada/rtable" }
