[package]
name = "routerd"
version = "0.1.0"
authors = ["Toshiaki Takada <toshi@reze.rs>"]
edition = "2018"

[dependencies]
getopts = "0.2.21"
log = "0.4.8"
simplelog = "0.7.4"
quick-error = "1.2.3"
thread-id = "3.3.0"
serde_json = "1.0.44"
regex = "1.3.3"
libc = "0.2.60"
nix = "0.13.0"

rtable = "0.2.1"
#rtable = { git = "https://github.com/sjtakada/rtable" }

common = { path = "../common" }

## maybe not used
#jsonpath = "0.1.1"
#tempdir = "0.3.7"
#lazycell = "1.2.1"
#tokio = "0.1.11"
#futures = "0.1.25"

[features]
#with-deprecated = []
